--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ env_logger = "0.9.0"
 anyhow = "1.0"
 nom = "7"
 itertools = "0.11.0"
+bimap = "0.6.3"
+indicatif = "0.17.6"
 
 [profile.release]
 debug = true
