--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ nom = "7"
 itertools = "0.11.0"
 bimap = "0.6.3"
 indicatif = "0.17.6"
+clap = { version = "4.4.2", features = ["derive"] }
 
 [profile.release]
 debug = true
