--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.0"
-env_logger = "0.9.0"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 anyhow = "1.0"
+thiserror = "1.0"
 nom = "7"
 itertools = "0.11.0"
 bimap = "0.6.3"
 indicatif = "0.17.6"
 clap = { version = "4.4.2", features = ["derive"] }
+fxhash = "0.2.1"
 
 [profile.release]
 debug = true
